--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-* {
+/* * {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
@@ -121,4 +121,8 @@ main {
 
 .done {
   text-decoration: line-through;
+} */
+
+*{
+  color: white;
 }
